implement start menu view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
 </head>
 
 <body>
+    <!-- start menu-->
+    <span>
+        <div id="start-menu">
+            <div id="logo-container">
+                <h1>Weird World Gaming</h1>
+                <img src="./assets/logo_img/ww_logo.png" />
+                <p>proudly presents:</p>
+            </div>
+            <!--<ul id="high-score"></ul>-->
+            <!--working title.....-->
+            <p id="main-title">bigchunguskicksthings</p>
+            <button id="start-btn">Start Game</button>
+        </div>
+    </span>
+    <!-- game view-->
+    <span>
+        <div id="game-container">
+            <div id="game-screen"></div>
+        </div>
+    </span>
+    <!--game over-->
+    <span>
+        <div id="game-over-menu">
+            <h1 id="game-over-text">GAME OVER</h1>
+            <button id="restart-button"></button>
+        </div>
+    </span>
 
 </body>
 
