implement game over view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <span>
         <div id="game-over-menu">
             <h1 id="game-over-text">GAME OVER</h1>
-            <button id="restart-button"></button>
+            <h2>Your Score:</h2>
+            <h2 id="player-score">666</h2>
+            <button id="restart-btn">Restart Game</button>
         </div>
     </span>
 
