--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./scripts/script.js" async></script>
     <script src="./scripts/game.js" async></script>
     <script src="./scripts/player.js" async></script>
+    <script src="./scripts/npc.js" async></script>
     <script src="./scripts/obstacle.js" async></script>
     <title>the game</title>
 </head>
@@ -25,17 +26,14 @@
             </div>
             <!--<ul id="high-score"></ul>-->
             <!--working title.....-->
-            <p id="main-title">bigchunguskicksthings</p>
+            <p id="main-title">space, kicks n chicks</p>
             <button id="start-btn">Start Game</button>
         </div>
     </span>
     <!-- game view-->
     <span>
         <div id="game-container">
-            <div id="game-screen">
-                <img id="hp-bar" src="./assets/sprites/trolls/trollface1_noBG.png" alt="">
-
-            </div>
+            <div id="game-screen"></div>
         </div>
     </span>
     <!--game over-->
@@ -47,11 +45,6 @@
             <button id="restart-btn">Restart Game</button>
         </div>
     </span>
-
-    <!-- <script src="./scripts/script.js"></script>
-    <script src="./scripts/game.js"></script>
-    <script src="./scripts/player.js"></script>
-    <script src="./scripts/obstacle.js"></script> -->
 </body>
 
 </html>
